Adding examples for get methods and update api-specs.yaml file
